--- a/pom.xml
+++ b/pom.xml
@@ -104,20 +104,24 @@
     </dependencies>
     <!--  https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin  -->
 <build>
-<pluginManagement>
-<plugins>
-<plugin>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-surefire-plugin</artifactId>
-<version>3.5.2</version>
-<configuration>
-<suiteXmlFiles>
-<suiteXmlFile>testng.xml</suiteXmlFile>
-</suiteXmlFiles>
-</configuration>
-</plugin>
-</plugins>
-</pluginManagement>
+  <plugins>
+    <plugin>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-maven</artifactId>
+      <version>2.11.2</version>
+    </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>3.5.2</version>
+      <configuration>
+        <suiteXmlFiles>
+          <suiteXmlFile>testng.xml</suiteXmlFile>
+        </suiteXmlFiles>
+      </configuration>
+    </plugin>
+  </plugins>
 </build>
+
   
 </project>
